# git-context-md-tests

./: .gitignore  CONTEXT.md  PROMPTS.md  README.md  package-lock.json  package.json  with-context-db-hard-solution.md  without-context-db-hard-solution.md
CONTEXT/: CONTEXT.md  CONTEXT_toc.md
with-context-db-oddo/: .gitignore  pyproject.toml
with-context-db-oddo/context-db/coding-standards/: coding-standards.md
with-context-db-oddo/context-db/od-do-project/: api-design.md  architecture.md  checklists.md  development.md  gotchas.md  known-bugs.md  od-do-project.md
with-context-db-oddo/context-db/od-do-project/extending/: circuit-library.md  extending.md  new-shapes.md
with-context-db-oddo/context-db/od-do-project/rendering/: backends.md  paths-and-lines.md  rendering.md  shape-system.md
with-context-db-oddo/docs/: index.html
with-context-db-oddo/docs-examples/outdoor-scene/: wood_frame.py
with-context-db-oddo/docs/src/user-guide/: colors.md
with-context-db-oddo/docs/themes/: bruha-config.js
with-context-db-oddo/examples/circuits/: charge_pump_circuit.py
with-context-db-oddo/examples/extended-shapes/: all_shapes_overview.py  annotations_example.py  flowchart_example.py  table_example.py
with-context-db-oddo/examples/placement/: 01_basic_placement.py  04_rotation_offset.py
with-context-db-oddo/src/od_do/: colors.py  config.py  geometry.py  transform.py
with-context-db-oddo/src/od_do/drawio/: __init__.py
with-context-db-oddo/src/od_do/shapes/: __init__.py  dashed_border.py  image.py
with-context-db-oddo/tests/: test_diagram.py  test_shapes.py
(+250 files in other folders)
